Add enhanced configs and quality of life changes for hyprland ecosystem

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = nemo
+$fileManager = nautilus
 $menu = rofi -show drun
 
 
@@ -118,12 +118,12 @@ decoration {
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.95
-    inactive_opacity = 0.85
+    active_opacity = 0.90
+    inactive_opacity = 0.75
 
     shadow {
         enabled = true
-        range = 4
+        range = 6
         render_power = 3
         color = rgba(1a1a1aee)
     }
@@ -131,7 +131,7 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 8
+        size = 6
         passes = 2
 
         vibrancy = 0.1696
@@ -245,9 +245,9 @@ source = ~/.config/hypr/UserSettings/user_settings.conf
 
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, O, exit,
+bind = $mainMod  SHIFT, O, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod SHIFT, F, togglefloating,
+bind = $mainMod  SHIFT, F, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
