--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -37,42 +37,41 @@
         {
             "type": "kernel",
             "key": " ",
-            "keyColor": "33",
+            "keyColor": "33"
         },
         {
-            "type": "packages",
-            "format": "{} (pacman)",
+	    "type": "packages",
             "key": " ",
-            "keyColor": "33",  
+            "format": "pacman: {pacman} flatpak: {flatpak-all}"
         },
         {
             "type": "shell",
             "key": " ",
-            "keyColor": "33", 
+            "keyColor": "33" 
         },
         {
             "type": "terminal",
             "key": " ",
-            "keyColor": "33", 
+            "keyColor": "33" 
         },
         {
             "type": "wm",
             "key": " ",
-            "keyColor": "33", 
+            "keyColor": "33" 
         },
         {
             "type": "uptime",
             "key": " ",
-            "keyColor": "33", 
+            "keyColor": "33" 
         },
         {
             "type": "media",
             "key": "󰝚 ",
-            "keyColor": "33", 
+            "keyColor": "33" 
         },
         "break",
         "colors",
         "break",
-        "break",
+        "break"
     ]
 }
