--- a/.config/hypr/UserSettings/user_settings.conf
+++ b/.config/hypr/UserSettings/user_settings.conf
@@ -9,8 +9,8 @@ bind = $mainMod ,W, exec, ~/.config/hypr/scripts/set_wallpaper.sh
 bind = $mainMod, SPACE, exec, rofi -show drun
 
 # hyprshot
-bind = , PRINT, exec, hyprshot -m window
-bind = SHIFT, PRINT, exec, hyprshot -m region
+bind = , PRINT, exec, env HYPRSHOT_DIR=/home/ash/Pictures/Screenshots hyprshot -m window
+bind = SHIFT, PRINT, exec, env HYPRSHOT_DIR=/home/ash/Pictures/Screenshots hyprshot -m region
 
 # hyprlock/hypridle
 exec-once = hypridle
@@ -56,4 +56,4 @@ bind = $mainMod, B, exec, firefox
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Apostrophe
-bind = $mainMod, A, exec, flatpak run  org.gnome.gitlab.somas.Apostrophe 
+bind = $mainMod, A, exec, flatpak run  org.gnome.gitlab.somas.Apostrophe
