--- a/.config/hypr/colors/rose_pine.conf
+++ b/.config/hypr/colors/rose_pine.conf
@@ -1,32 +1,32 @@
-# Rosé Pine Color Palette (Dark)
+# Rosé Pine Color Palette (Dark) - Converted to Pywal/Decimal RGBA (R,G,B,A) format
 
-$fujiWhite = rgb(e0def4)
-$oldWhite = rgb(f6c177)
-$sumiInk1 = rgb(191724)   
-$sumiInk2 = rgb(1f1d2e)
-$sumiInk3 = rgb(26233a)
-$sumiInk4 = rgb(403d52)
-$waveBlue1 = rgb(223249)    
-$waveBlue2 = rgb(31748f)     
-$crystalBlue = rgb(31748f)
-$springBlue = rgb(7fb4ca)
-$lightBlue = rgb(a3d4d5)
-$oniViolet = rgb(c4a7e7)
-$sakuraPink = rgb(ebbcba)
-$surimiOrange = rgb(f6c177)
-$autumnRed = rgb(eb6f92)
-$carpYellow = rgb(f6c177)
-$boatYellow = rgb(dea95f)
-$dragonBlue = rgb(658594)
-$waveAqua = rgb(7aa89f)
-$lightGreen = rgb(31748f)
-$dragonBlack = rgb(16161d)
+$fujiWhite = rgba(224,222,244,1.0)
+$oldWhite = rgba(246,193,119,1.0)
+$sumiInk1 = rgba(25,23,36,1.0)
+$sumiInk2 = rgba(31,29,46,1.0)
+$sumiInk3 = rgba(38,35,58,1.0)
+$sumiInk4 = rgba(64,61,82,1.0)
+$waveBlue1 = rgba(34,50,73,1.0)
+$waveBlue2 = rgba(49,116,143,1.0)
+$crystalBlue = rgba(49,116,143,1.0)
+$springBlue = rgba(127,180,202,1.0)
+$lightBlue = rgba(163,212,213,1.0)
+$oniViolet = rgba(196,167,231,1.0)
+$sakuraPink = rgba(235,188,186,1.0)
+$surimiOrange = rgba(246,193,119,1.0)
+$autumnRed = rgba(235,111,146,1.0)
+$carpYellow = rgba(246,193,119,1.0)
+$boatYellow = rgba(222,169,95,1.0)
+$dragonBlue = rgba(101,133,148,1.0)
+$waveAqua = rgba(122,168,159,1.0)
+$lightGreen = rgba(49,116,143,1.0)
+$dragonBlack = rgba(22,22,29,1.0)
 
-# Aliases for consistency
+# Aliases for consistency (using Pywal/Decimal RGBA)
 $accent = $sakuraPink
-$accentAlpha = ebbcba
+$accentAlpha = 235,188,186
 $text = $fujiWhite
-$textAlpha = e0def4
+$textAlpha = 224,222,244
 $base = $sumiInk1
 $surface0 = $sumiInk3
 $surface1 = $sumiInk4
