--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,4 +16,5 @@ scrollbar_handle_opacity      0
 scrollbar_track_opacity       0
 scrollbar_track_hover_opacity 0
 
-sync_to_monitor no
+sync_to_monitor no 
+confirm_os_window_close 0
