Add all new changes to sync to other machines

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -11,7 +11,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/Pictures/Wallpapers/spooky-gengar-purple-pokemon-desktop-4k.jpg
+    path = ~/Pictures/Wallpapers/ash_wall.png
     blur_passes = 2
     color = $base
 }
