--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ env = QT_QPA_PLATFORM,wayland
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=eDP-1,1920x1200@60,0x0,1
 
 
 ###################
@@ -206,8 +206,8 @@ misc {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = fr, ara
-    kb_variant = azerty
+    kb_layout = us, ara
+    kb_variant = 
     kb_model =
     kb_options = grp:alt_shift_toggle
     kb_rules =
@@ -217,7 +217,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
@@ -259,28 +259,28 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, ampersand, workspace, 1
-bind = $mainMod, eacute, workspace, 2
-bind = $mainMod, quotedbl, workspace, 3
-bind = $mainMod, apostrophe, workspace, 4
-bind = $mainMod, parenleft, workspace, 5
-bind = $mainMod, minus, workspace, 6
-bind = $mainMod, egrave, workspace, 7
-bind = $mainMod, underscore, workspace, 8
-bind = $mainMod, ccedilla, workspace, 9
-bind = $mainMod, agrave, workspace, 10
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9
-bind = $mainMod SHIFT, ampersand, movetoworkspace, 1
-bind = $mainMod SHIFT, eacute, movetoworkspace, 2
-bind = $mainMod SHIFT, quotedbl, movetoworkspace, 3
-bind = $mainMod SHIFT, apostrophe, movetoworkspace, 4
-bind = $mainMod SHIFT, parenleft, movetoworkspace, 5
-bind = $mainMod SHIFT, minus, movetoworkspace, 6
-bind = $mainMod SHIFT, egrave, movetoworkspace, 7
-bind = $mainMod SHIFT, underscore, movetoworkspace, 8
-bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
-bind = $mainMod SHIFT, agrave, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 
 
@@ -311,6 +311,10 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+# brightnessctl
+bindel = , XF86MonBrightnessUp, exec, brightnessctl s 10%+
+bindel = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -322,10 +326,10 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+# windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 # Hyprland portlas
 exec-once = /usr/libexec/xdg-desktop-portal-wlr
