--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,126 +1,92 @@
 {
-	// "height": 18, // Waybar height (to be removed for auto height)
-	"spacing": 2, // Gaps between modules (4px)
-	
-	"modules-left": [
-		"custom/cava",
-		"hyprland/workspaces"
-	],
-
-	"modules-center": [
-		"hyprland/window"
-	],
-
-
-	"modules-right": [
-		"tray",
-		"hyprland/language",
-		"keyboard-state",
-		//"pulseaudio",
-		//"backlight",
-		"clock",
-		"custom/swaync"
-	],
-	
-	//modules-left
-	"custom/cava": {
-		"format": "{}",
-		"exec": "~/.config/hypr/scripts/cava.sh",
-		"restart-interval": 1,
-		"hide-empty": true,
-		"tooltip": false
-	},
-
-	"hyprland/workspaces": {
-		"format": "{icon}",
-		"on-click": "activate",
-		"format-icons": {
-			"1": "一",
-			"2": "二",
-			"3": "三",
-			"4": "四",
-			"5": "五",
-			"6": "六",
-			"7": "七",
-			"8": "八",
-			"9": "九",
-			"10": "十"
-			//"active": "●"
-		},
-		"sort-by-number": true,
-		"persistent-workspaces": {
-			"*": 5,
-			"HDMI-A-1": 3
-		}
-	},
-
-
-	//modules-center
-	"hyprland/window": {
-		  "format": "{}",
-		  "max-length": 30,
-		  "tooltip": false,
-		  "all-outputs": true
-	},
-	
-	//modules-right
-	"tray":{
-		"icon-size":15,
-		"spacing":5,
-		"tooltip": false
-	},
-
-	"hyprland/language": {
-		"format": "󰌌  {short}",
-		"tooltip-format": "Language: {long}"
-	},
-
-	"keyboard-state": {
-		//"numlock": true,
-		"capslock": true,
-		"format": "{name} {icon} ",
-		"format-icons": {
-		"locked": " ",
-		"unlocked": ""
-		}
-	},
-/*
-	"pulseaudio": {
-		"format": "{volume}% {icon} {format_source}",
-		"format-bluetooth": "{volume}% {icon} {format_source}",
-		"format-bluetooth-muted": " {icon} {format_source}",
-		"format-muted": " {format_source}",
-		"format-source": "  {volume}% ",
-		"format-source-muted": "",
-		"format-icons": {
-		    "headphone": "",
-		    "hands-free": "",
-		    "headset": "",
-		    "phone": "",
-		    "portable": "",
-		    "car": "",
-		    "default": ["", "", ""]
-		},
-		"on-click": "pavucontrol",
-		"tooltip":false
-	},
-
-	"backlight": {
-		"format": "{icon}",
-		"format-icons": ["", "", "", "", "", "", "", "", ""],
-		"tooltip":false
-	},
-*/
-	"clock": {
-		"format": "{:%I:%M %p}",
-		"format-alt": "{:%Y-%m-%d}",
-		"tooltip": false
-	},
-
-	"custom/swaync": {
-		"format": "", 		          
-		"on-click": "swaync-client -t",
-		"on-click-right": "swaync-client -c", 
-		"tooltip": false
-	},
+    "spacing": 2,
+    "modules-left": [
+        "custom/cava",
+        "hyprland/workspaces"
+    ],
+    "modules-center": [
+        "hyprland/window"
+    ],
+    "modules-right": [
+        "tray",
+        "hyprland/language",
+        "keyboard-state",
+        "battery",
+        "clock",
+        "custom/swaync"
+    ],
+    "custom/cava": {
+        "format": "{}",
+        "exec": "~/.config/hypr/scripts/cava.sh",
+        "restart-interval": 1,
+        "hide-empty": true,
+        "tooltip": false
+    },
+    "hyprland/workspaces": {
+        "format": "{icon}",
+        "on-click": "activate",
+        "format-icons": {
+            "1": "一",
+            "2": "二",
+            "3": "三",
+            "4": "四",
+            "5": "五",
+            "6": "六",
+            "7": "七",
+            "8": "八",
+            "9": "九",
+            "10": "十"
+        },
+        "sort-by-number": true,
+        "persistent-workspaces": {
+            "*": 5,
+            "HDMI-A-1": 3
+        }
+    },
+    "hyprland/window": {
+          "format": "{}",
+          "max-length": 30,
+          "tooltip": false,
+          "all-outputs": true
+    },
+    "tray":{
+        "icon-size":15,
+        "spacing":5,
+        "tooltip": false
+    },
+    "hyprland/language": {
+        "format": "󰌌  {short}",
+        "tooltip-format": "Language: {long}"
+    },
+    "keyboard-state": {
+        "capslock": true,
+        "format": "{name} {icon} ",
+        "format-icons": {
+        "locked": " ",
+        "unlocked": ""
+        }
+    },
+    "battery": {
+        "states": {
+            "warning": 30,
+            "critical": 15
+        },
+        "format": "{icon}  {capacity}%",
+        "format-charging": "   {capacity}%",
+        "format-plugged": "   {capacity}%",
+        "format-alt": "{icon}   {time}",
+        "format-icons": ["", "", "", "", ""],
+	"tooltip": false
+    },
+    "clock": {
+        "format": "{:%I:%M %p}",
+        "format-alt": "{:%Y-%m-%d}",
+        "tooltip": false
+    },
+    "custom/swaync": {
+        "format": "",                    
+        "on-click": "swaync-client -t",
+        "on-click-right": "swaync-client -c", 
+        "tooltip": false
+    }
 }
