Add some few enhancements

--- a/.config/hypr/UserSettings/user_settings.conf
+++ b/.config/hypr/UserSettings/user_settings.conf
@@ -44,7 +44,7 @@ bind = $mainMod, Z, exec, ~/.config/rofi/scripts/rofi-emoji.sh
 
 # rofi audio 
 bind = $mainMod, M, exec, ~/.config/rofi/scripts/rofi-music-launcher.sh
-bind = $mainMod SHIFT, M, exec, pkill vlc
+bind = $mainMod SHIFT, M, exec, killall vlc
 
 # vscode
 bind = $mainMod, C, exec, code
