--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -11,7 +11,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/Pictures/Wallpapers/ash_wall.png
+    path = ~/Pictures/Wallpapers/subway.jpg
     blur_passes = 2
     color = $base
 }
