--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -9,12 +9,14 @@
     ],
     "modules-right": [
         "tray",
+        "pulseaudio",
         "hyprland/language",
         "keyboard-state",
         "battery",
         "clock",
         "custom/swaync"
     ],
+
     "custom/cava": {
         "format": "{}",
         "exec": "~/.config/hypr/scripts/cava.sh",
@@ -22,6 +24,7 @@
         "hide-empty": true,
         "tooltip": false
     },
+
     "hyprland/workspaces": {
         "format": "{icon}",
         "on-click": "activate",
@@ -43,29 +46,46 @@
             "HDMI-A-1": 3
         }
     },
+
     "hyprland/window": {
-          "format": "{}",
-          "max-length": 30,
-          "tooltip": false,
-          "all-outputs": true
+        "format": "{}",
+        "max-length": 30,
+        "tooltip": false,
+        "all-outputs": true
     },
-    "tray":{
-        "icon-size":15,
-        "spacing":5,
+
+    "pulseaudio": {
+        "format": "{icon}  {volume}%",
+        "format-muted": "󰝟",
+        "format-icons": {
+            "low": "󰕿",
+            "medium": "󰖀",
+            "high": "󰕾"
+        },
+        "on-click": "pavucontrol",
         "tooltip": false
     },
+
+    "tray": {
+        "icon-size": 15,
+        "spacing": 5,
+        "tooltip": false
+    },
+
     "hyprland/language": {
         "format": "󰌌  {short}",
         "tooltip-format": "Language: {long}"
     },
+
     "keyboard-state": {
         "capslock": true,
         "format": "{name} {icon} ",
         "format-icons": {
-        "locked": " ",
-        "unlocked": ""
+            "locked": " ",
+            "unlocked": ""
         }
     },
+
     "battery": {
         "states": {
             "warning": 30,
@@ -76,17 +96,20 @@
         "format-plugged": "   {capacity}%",
         "format-alt": "{icon}   {time}",
         "format-icons": ["", "", "", "", ""],
-	"tooltip": false
+        "tooltip": false
     },
+
     "clock": {
         "format": "{:%I:%M %p}",
         "format-alt": "{:%Y-%m-%d}",
         "tooltip": false
     },
+
     "custom/swaync": {
-        "format": "",                    
+        "format": "",
         "on-click": "swaync-client -t",
-        "on-click-right": "swaync-client -c", 
+        "on-click-right": "swaync-client -c",
         "tooltip": false
     }
 }
+
