Add visual optimazions to hyprland and waybar and fix problems of styling swaync

--- a/.config/hypr/UserSettings/user_settings.conf
+++ b/.config/hypr/UserSettings/user_settings.conf
@@ -55,5 +55,6 @@ bind = $mainMod, B, exec, firefox
 # polkit-agent
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
-# Apostrophe
-bind = $mainMod, A, exec, flatpak run  org.gnome.gitlab.somas.Apostrophe
+# gnome-text-editor
+bind = $mainMod, T, exec, gnome-text-editor
+
