--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -11,7 +11,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/Pictures/Wallpapers/subway.jpg
+    path = ~/Pictures/Wallpapers/1393660.png
     blur_passes = 2
     color = $base
 }
@@ -21,9 +21,9 @@ label {
     monitor =
     text = cmd[update:30000] echo "$(date +"%I:%M %p")"
     color = $text
-    font_size = 70
+    font_size = 100
     font_family = $font
-    position = -30, 8
+    position = 0, -220
     halign = center
     valign = top
 }
@@ -35,7 +35,7 @@ label {
     color = $text
     font_size = 35
     font_family = $font
-    position = -30, -140
+    position = 0, -140
     halign = center
     valign = top
 }
@@ -55,7 +55,7 @@ image {
 # INPUT FIELD
 input-field {
     monitor =
-    size = 300, 60
+    size = 400, 60
     outline_thickness = 4
     dots_size = 0.2
     dots_spacing = 0.2
@@ -80,7 +80,7 @@ input-field {
 label {
     text = "Hello again Ash, how was your day?"
     font_family = $font 
-    font_size = 30
+    font_size = 40
     color = $text 
     position = -30, -180 
     halign = center
