--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,9 @@
 # include $HOME/.config/kitty/themes/rose-pine.conf
 include ~/.cache/wal/colors-kitty.conf
 
+# font_family Mononoki Nerd Font
 font_family JetBrainsMono Nerd Font
-font_size   14
+font_size   15
 
 enable_audio_bell  no
 shell              zsh
@@ -18,3 +19,6 @@ scrollbar_track_hover_opacity 0
 
 sync_to_monitor no 
 confirm_os_window_close 0
+
+selection_foreground #ffffff
+selection_background #00008B
