--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -51,11 +51,11 @@
   },
 
   "pulseaudio": {
-    "format": "{icon} {volume}% {format_source}",
-    "format-bluetooth": "{icon} {volume}% {format_source}",
-    "format-bluetooth-muted": "󰝟 {icon} {format_source}",
-    "format-muted": "󰝟 {format_source}",
-    "format-source": "󰍬 {volume}%",
+    "format": "{icon}   {volume}% {format_source}",
+    "format-bluetooth": "{icon}   {volume}% {format_source}",
+    "format-bluetooth-muted": "󰝟   {icon} {format_source}",
+    "format-muted": "󰝟   {format_source}",
+    "format-source": "󰍬   {volume}%",
     "format-source-muted": "󰍭",
     "format-icons": {
       "headphone": "",
@@ -77,6 +77,7 @@
     "on-scroll-up": "brightnessctl set 1%+",
     "on-scroll-down": "brightnessctl set 1%-",
     "min-length": 6,
+    "tooltip": false,
   },
 
   "tray": {
